[gd_scene load_steps=11 format=4 uid="uid://dtnjanoy1wrdh"]

[ext_resource type="Script" uid="uid://dtymchw2srtj4" path="res://Scripts/blep_menu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://d3niwtnprc4yq" path="res://Assests/BG.png" id="2"]
[ext_resource type="Texture2D" uid="uid://djhiq8vnwj6ou" path="res://Assests/UI.png" id="3"]
[ext_resource type="PackedScene" uid="uid://mgpa611gop12" path="res://Scenes/install_sounds.tscn" id="4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dbi34"]
texture = ExtResource("3")
region_rect = Rect2(641, 839, 383, 127)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hc7tl"]
texture = ExtResource("3")
region_rect = Rect2(641, 359, 383, 127)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lnrrm"]
texture = ExtResource("3")
region_rect = Rect2(641, 520, 383, 137)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_608v0"]
texture = ExtResource("3")
region_rect = Rect2(40, 644, 182, 178)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ckim5"]
texture = ExtResource("3")
region_rect = Rect2(283, 646, 187, 174)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c6wsm"]
texture = ExtResource("3")
region_rect = Rect2(962, 1148, 53, 52)

[node name="blep_menu" type="Node2D"]
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(641.5, 359)
scale = Vector2(0.67, 0.67)
texture = ExtResource("2")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1283.0
offset_bottom = 723.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -298.5
offset_top = 27.0
offset_right = 300.5
offset_bottom = 695.0
grow_horizontal = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Control/MarginContainer"]
layout_mode = 2
texture = ExtResource("3")
region_rect = Rect2(504, 163, 128, 127)
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -168.5
offset_top = 88.0
offset_right = 181.5
offset_bottom = -61.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="about_game" type="Button" parent="Control/MarginContainer/NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 55
theme_override_styles/hover = SubResource("StyleBoxTexture_dbi34")
theme_override_styles/pressed = SubResource("StyleBoxTexture_hc7tl")
theme_override_styles/normal = SubResource("StyleBoxTexture_lnrrm")
text = "ABOUT GAME"

[node name="kitdy_links" type="Button" parent="Control/MarginContainer/NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 55
theme_override_styles/hover = SubResource("StyleBoxTexture_dbi34")
theme_override_styles/pressed = SubResource("StyleBoxTexture_hc7tl")
theme_override_styles/normal = SubResource("StyleBoxTexture_lnrrm")
text = "KITDY LINKS"

[node name="cast_list" type="Button" parent="Control/MarginContainer/NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 55
theme_override_styles/hover = SubResource("StyleBoxTexture_dbi34")
theme_override_styles/pressed = SubResource("StyleBoxTexture_hc7tl")
theme_override_styles/normal = SubResource("StyleBoxTexture_lnrrm")
text = "CAST LIST"

[node name="credits" type="Button" parent="Control/MarginContainer/NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 55
theme_override_styles/hover = SubResource("StyleBoxTexture_dbi34")
theme_override_styles/pressed = SubResource("StyleBoxTexture_hc7tl")
theme_override_styles/normal = SubResource("StyleBoxTexture_lnrrm")
text = "CREDITS"

[node name="blep" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 828.0
offset_top = 583.0
offset_right = 930.0
offset_bottom = 683.0
theme_override_styles/hover = SubResource("StyleBoxTexture_608v0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ckim5")
theme_override_styles/normal = SubResource("StyleBoxTexture_608v0")

[node name="quit" type="Button" parent="Control"]
layout_mode = 0
offset_left = 894.0
offset_top = 14.0
offset_right = 950.0
offset_bottom = 67.0
theme_override_styles/hover = SubResource("StyleBoxTexture_c6wsm")
theme_override_styles/pressed = SubResource("StyleBoxTexture_c6wsm")
theme_override_styles/normal = SubResource("StyleBoxTexture_c6wsm")

[node name="InstallSounds" parent="." instance=ExtResource("4")]
root_path = NodePath("..")

[connection signal="pressed" from="Control/MarginContainer/NinePatchRect/VBoxContainer/about_game" to="." method="_on_about_game_pressed"]
[connection signal="pressed" from="Control/MarginContainer/NinePatchRect/VBoxContainer/kitdy_links" to="." method="_on_kitdy_links_pressed"]
[connection signal="pressed" from="Control/MarginContainer/NinePatchRect/VBoxContainer/cast_list" to="." method="_on_cast_list_pressed"]
[connection signal="pressed" from="Control/MarginContainer/NinePatchRect/VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Control/quit" to="." method="_on_quit_pressed"]
